Fix scrollbars always showing (#147)

--- a/packages/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
+++ b/packages/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
@@ -1,12 +1,10 @@
 .container {
   display: flex;
-  height: 100vh;
-  overflow: scroll;
 }
 
 .sidebar {
   position: sticky;
-  height: 100vh;
+  align-self: flex-start;
   top: 0;
 }
 
